update book details card

--- a/index.html
+++ b/index.html
@@ -43,40 +43,40 @@
     <main class="books-tile">
         <div class="list">
             <div class="book-details">
-                <div><img src="assets/Adam-Smith.jpg" alt=""></div>
+                <div><img src="assets/Adam-Smith.jpg" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div>Adam Smith</div>
                 <div>The Wealth of Nation</div>
-                <div style="margin-top: 20px; margin-bottom: 20px;">
-                    <button class="comment">14</button>
-                    <button class="rating">4.6</button>
+                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
                 </div>
-                <div>
+                <div style="display: flex; flex-direction: row; gap: 5px;">
                     <div>$15.50</div>
                     <div>$10.50</div>
                 </div>
             </div>
             <div class="book-details">
-                <div><img src="assets/Adam-Smith.jpg" alt=""></div>
+                <div><img src="assets/Adam-Smith.jpg" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div>Adam Smith</div>
                 <div>The Wealth of Nation</div>
-                <div style="margin-top: 20px;">
-                    <button class="comment">14</button>
-                    <button class="rating">4.6</button>
+                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
                 </div>
-                <div>
+                <div style="display: flex; flex-direction: row; gap: 5px;">
                     <div>$15.50</div>
                     <div>$10.50</div>
                 </div>
             </div>
             <div class="book-details">
-                <div><img src="assets/Adam-Smith.jpg" alt=""></div>
+                <div><img src="assets/Adam-Smith.jpg" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div>Adam Smith</div>
                 <div>The Wealth of Nation</div>
-                <div>
-                    <button></button>
-                    <button></button>
+                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
                 </div>
-                <div>
+                <div style="display: flex; flex-direction: row; gap: 5px;">
                     <div>$15.50</div>
                     <div>$10.50</div>
                 </div>
