update login text bold

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div><img src="assets/icon-bookmark.png" alt="" style="max-height: 25px; max-width: 25px"></div>
                 <div><img src="assets/icon-bag.png" alt="" style="max-height: 25px; max-width: 25px"></div>
                 <div>
-                    <button style="background-color: #F4CE47; border: #F4CE47 1px; border-radius: 15px; padding: 8px 25px;"> LOGIN </button>
+                    <button style="background-color: #F4CE47; border: #F4CE47 1px; border-radius: 15px; padding: 8px 25px;"> <b>LOGIN</b> </button>
                 </div>
             </div>
         </nav>
