complete book card

--- a/index.html
+++ b/index.html
@@ -43,54 +43,118 @@
     <main class="books-tile">
         <div class="list">
             <div class="book-details">
-                <div><img src="assets/Adam-Smith.jpg" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
-                <div>Adam Smith</div>
-                <div>The Wealth of Nation</div>
+                <div><img src="assets/Adam-Smith.png" alt="" style="border: white solid 1px; border-radius: 20px; "></div>
+                <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Adam Smith</div>
+                <div style="font-weight: 400;">The Wealth of Nation</div>
                 <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
                     <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
                     <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
-                    <div>$15.50</div>
-                    <div>$10.50</div>
+                    <s style="opacity: 0.38;">$15.50</s>
+                    <div style="font-weight: 400;">$10.50</div>
                 </div>
             </div>
             <div class="book-details">
-                <div><img src="assets/Adam-Smith.jpg" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
-                <div>Adam Smith</div>
-                <div>The Wealth of Nation</div>
+                <div><img src="assets/matermagarita.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
+                <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Mikhail Bulgakov</div>
+                <div style="font-weight: 400;">Mater Margarita</div>
                 <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
                     <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
                     <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
-                    <div>$15.50</div>
-                    <div>$10.50</div>
+                    <s style="opacity: 0.38;">$15.50</s>
+                    <div style="font-weight: 400;">$10.50</div>
                 </div>
             </div>
             <div class="book-details">
-                <div><img src="assets/Adam-Smith.jpg" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
-                <div>Adam Smith</div>
-                <div>The Wealth of Nation</div>
+                <div><img src="assets/Alex-Gilvarry.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
+                <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Alex Gilvarry</div>
+                <div style="font-weight: 400; width: 248px;">From the Memoirs of a Non-Enemy Combatant</div>
                 <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
                     <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
                     <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
-                    <div>$15.50</div>
-                    <div>$10.50</div>
+                    <div style="font-weight: 400;">$10.50</div>
                 </div>
             </div>
-        </div>
-        <div class="list">
-            <div>1</div>
-            <div>1</div>
-            <div>1</div>
-        </div>
-        <div class="list">
-            <div>1</div>
-            <div>1</div>
-            <div>1</div>
+            <div class="book-details">
+                <div><img src="assets/patrick-ness.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
+                <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Patrick Ness</div>
+                <div style="font-weight: 400;">More Than This</div>
+                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                </div>
+                <div style="display: flex; flex-direction: row; gap: 5px;">
+                    <div style="font-weight: 400;">$10.50</div>
+                </div>
+            </div>
+            <div class="book-details">
+                <div><img src="assets/mario-puzo.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
+                <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Mario Puzo</div>
+                <div style="font-weight: 400;">The Godfather</div>
+                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                </div>
+                <div style="display: flex; flex-direction: row; gap: 5px;">
+                    <div style="font-weight: 400;">$10.50</div>
+                </div>
+            </div>
+            <div class="book-details">
+                <div><img src="assets/erik-spiekermenn.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
+                <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Erik Spiekermann</div>
+                <div style="font-weight: 400;">Hello I am Erik</div>
+                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                </div>
+                <div style="display: flex; flex-direction: row; gap: 5px;">
+                    <s style="opacity: 0.38;">$15.50</s>
+                    <div style="font-weight: 400;">$10.50</div>
+                </div>
+            </div>
+            <div class="book-details">
+                <div><img src="assets/don-denilillo.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
+                <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Don Denilillo</div>
+                <div style="font-weight: 400;">The Names</div>
+                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                </div>
+                <div style="display: flex; flex-direction: row; gap: 5px;">
+                    <s style="opacity: 0.38;">$15.50</s>
+                    <div style="font-weight: 400;">$10.50</div>
+                </div>
+            </div>
+            <div class="book-details">
+                <div><img src="assets/daniel-gargallo.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
+                <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Daniel Gargallo</div>
+                <div style="font-weight: 400;">She Beyond Sun</div>
+                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                </div>
+                <div style="display: flex; flex-direction: row; gap: 5px;">
+                    <s style="opacity: 0.38;">$15.50</s>
+                    <div style="font-weight: 400;">$10.50</div>
+                </div>
+            </div>
+            <div class="book-details">
+                <div><img src="assets/alan-trotter.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
+                <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Alan Trotter</div>
+                <div style="font-weight: 400;">Muscle</div>
+                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                </div>
+                <div style="display: flex; flex-direction: row; gap: 5px;">
+                    <div style="font-weight: 400;">$22.50</div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
