--- a/index.html
+++ b/index.html
@@ -158,7 +158,29 @@
         </div>
     </main>
     <footer>
-
+        <div class="footer">
+            <div class="footer-top">
+                <div style="display: flex; flex-direction: row; align-items: center; gap: 5px; color: white;">
+                    <img src="assets/logo-100.png" alt="logo" style="max-height: 35px; max-width: 35px">
+                    <b>BIG BOOKSHELF</b>
+                </div>
+                <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 5px;">
+                    <img src="assets/insta.png" alt="" style="max-height: 24px; max-width: 24px">
+                    <img src="assets/fb.png" alt="" style="max-height: 24px; max-width: 24px">
+                    <img src="assets/twitter.png" alt="" style="max-height: 24px; max-width: 24px">
+                </div>
+            </div>
+            <div class="footer-bot">
+                <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 10px;">
+                    <div>Terms and Condition</div>
+                    <div>Privacy Policy</div>
+                </div>
+                <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 10px;">
+                    <div>+44 1332 412251</div>
+                    <div>support@bbookshelf.com</div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
