comment rating button css inline to external

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <div><img src="assets/Adam-Smith.png" alt="" style="border: white solid 1px; border-radius: 20px; "></div>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Adam Smith</div>
                 <div style="font-weight: 400;">The Wealth of Nation</div>
-                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
-                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
-                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                <div class="button-commentrating">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" class="commentrating-img"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" class="commentrating-img"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
                     <s style="opacity: 0.38;">$15.50</s>
@@ -59,9 +59,9 @@
                 <div><img src="assets/matermagarita.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Mikhail Bulgakov</div>
                 <div style="font-weight: 400;">Mater Margarita</div>
-                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
-                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
-                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                <div class="button-commentrating">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" class="commentrating-img"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" class="commentrating-img"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
                     <s style="opacity: 0.38;">$15.50</s>
@@ -72,9 +72,9 @@
                 <div><img src="assets/Alex-Gilvarry.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Alex Gilvarry</div>
                 <div style="font-weight: 400; width: 248px;">From the Memoirs of a Non-Enemy Combatant</div>
-                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
-                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
-                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                <div class="button-commentrating">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" class="commentrating-img"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" class="commentrating-img"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
                     <div style="font-weight: 400;">$10.50</div>
@@ -84,9 +84,9 @@
                 <div><img src="assets/patrick-ness.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Patrick Ness</div>
                 <div style="font-weight: 400;">More Than This</div>
-                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
-                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
-                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                <div class="button-commentrating">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" class="commentrating-img"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" class="commentrating-img"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
                     <div style="font-weight: 400;">$10.50</div>
@@ -96,9 +96,9 @@
                 <div><img src="assets/mario-puzo.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Mario Puzo</div>
                 <div style="font-weight: 400;">The Godfather</div>
-                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
-                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
-                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                <div class="button-commentrating">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" class="commentrating-img"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" class="commentrating-img"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
                     <div style="font-weight: 400;">$10.50</div>
@@ -108,9 +108,9 @@
                 <div><img src="assets/erik-spiekermenn.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Erik Spiekermann</div>
                 <div style="font-weight: 400;">Hello I am Erik</div>
-                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
-                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
-                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                <div class="button-commentrating">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" class="commentrating-img"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" class="commentrating-img"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
                     <s style="opacity: 0.38;">$15.50</s>
@@ -121,9 +121,9 @@
                 <div><img src="assets/don-denilillo.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Don Denilillo</div>
                 <div style="font-weight: 400;">The Names</div>
-                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
-                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
-                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                <div class="button-commentrating">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" class="commentrating-img"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" class="commentrating-img"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
                     <s style="opacity: 0.38;">$15.50</s>
@@ -134,9 +134,9 @@
                 <div><img src="assets/daniel-gargallo.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Daniel Gargallo</div>
                 <div style="font-weight: 400;">She Beyond Sun</div>
-                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
-                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
-                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                <div class="button-commentrating">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" class="commentrating-img"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" class="commentrating-img"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
                     <s style="opacity: 0.38;">$15.50</s>
@@ -147,9 +147,9 @@
                 <div><img src="assets/alan-trotter.png" alt="" style="border: white solid 1px; border-radius: 20px;"></div>
                 <div style="opacity: 0.65; font-size: small; margin-top: 10px;">Alan Trotter</div>
                 <div style="font-weight: 400;">Muscle</div>
-                <div style="display: flex; flex-direction: row; gap: 5px; margin-bottom: 20px; margin-top: 20px;">
-                    <button class="commentrating">14 <img src="assets/comment.png" alt="" style="max-height: 15px; max-width: 20px"></button>
-                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" style="max-height: 15px; max-width: 20px"> (165)</button>
+                <div class="button-commentrating">
+                    <button class="commentrating">14 <img src="assets/comment.png" alt="" class="commentrating-img"></button>
+                    <button class="commentrating">4.6 <img src="assets/star.png" alt="" class="commentrating-img"> (165)</button>
                 </div>
                 <div style="display: flex; flex-direction: row; gap: 5px;">
                     <div style="font-weight: 400;">$22.50</div>
