add book details left side

--- a/bookinfo.html
+++ b/bookinfo.html
@@ -41,7 +41,56 @@
         </div>
     </header>
     <main style="background-color: #F6F4F0;">
-        
+        <div class="container-bookinfo">
+            <div class="book-info">
+                <div class="book-info-left">
+                    <img src="assets/alan-trotter.png" alt="" style="border-radius: 20px;">
+                    <div class="details" style="font-weight: 500;">
+                        <div>Alan Trotter</div>
+                        <b style="font-size: xx-large;">MUSCLE</b>
+                        <div class="flexrow" style="gap: 10px;">
+                            <div class="flexrow" style="gap: 5px;"> 
+                                <img src="assets/whitestar.png" alt="" style="max-width: 20px; max-height: 20px;"> 
+                                <div>4.5 (100)</div>
+                            </div>
+                            <div>4 reviews</div>
+                        </div>
+                        <div class="flexrow" style="gap: 10px;">
+                            <div class="flexcol">
+                                <div>Category</div>
+                                <div>Publish Date</div>
+                                <div>Languages</div>
+                                <div>Pages</div>
+                                <div>Read Time</div>
+                                <div>Type</div>
+                                <div>Publisher</div>
+                            </div>
+                            <div class="flexcol">
+                                <div>Novel</div>
+                                <div>May 2007</div>
+                                <div>English</div>
+                                <div>208</div>
+                                <div>4-6 hours</div>
+                                <div>Hardcover</div>
+                                <div>Harvill Secker</div>
+                            </div>
+                        </div>
+                        <div class="flexrow" style="gap: 20px; font-size: xx-large; padding-top: 10px; padding-bottom: 10px;">
+                            <div style="opacity: 0.6;">$12.50</div>
+                            <div>$10.50</div>
+                        </div>
+                        <div class="flexrow" style="gap: 12px;">
+                            <button style="padding: 16px 28px; border: 1px solid #F4CE47; border-radius: 16px; background-color: #F4CE47;">BUY NOW</button>
+                            <button style=" color: #F4CE47; padding: 16px 28px; border: 1px solid #F4CE47; border-radius: 16px; background-color: transparent">ADD TO BAG</button>
+                    </div>
+                </div>
+                <div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div></div>
+        </div>
     </main>
     <footer>
         <div class="footer">
