--- a/bookinfo.html
+++ b/bookinfo.html
@@ -84,13 +84,20 @@
                             <button style=" color: #F4CE47; padding: 16px 28px; border: 1px solid #F4CE47; border-radius: 16px; background-color: transparent">ADD TO BAG</button>
                     </div>
                 </div>
-                <div>
-                    <div></div>
-                    <div></div>
-                </div>
             </div>
-            <div></div>
+            <div class="book-info-right">
+                <div class="flexcol" style="padding: 20px; background-color: white; height: 390px; width: 371px; border-radius: 20px; gap: 20px; align-content: space-between;">
+                    <div class="flexrow" style="justify-content: space-between;">
+                        <div>PLOT SUMMARY</div>
+                        <img src="assets/arrowright.png" alt="">
+                    </div>
+                    <div style="max-height: 286px; text-overflow: ellipsis; overflow: hidden;">In a hard-boiled city of crooks, grifts and rackets lurk a pair of toughs: Box and _____. They're the kind of men capable of extracting apologies and reparations, of teaching you a chilling lesson. They seldom think twice, and ask very few questions.Until one night over the poker table, they encounter a pulp writer with wild ideas and an unscrupulous private detective, leading them into what is either a classic mystery, a senseless maze of corpses, or an inextricable fever dream . . . Drunk on cinematic and literary influence, Muscle is a slice of noir fiction in collapse, a ceaselessly imaginative story of violence, boredom and madness.</div>
+                    <u>READ PREVIEW</u>
+                </div>
+                <div></div>
+            </div>
         </div>
+    </div>
     </main>
     <footer>
         <div class="footer">
